# Thesis

./: .gitignore  Chartify.bash  Thesis_workflow.html  allhashes  allhashes2  allhashes3  compress_cleaned_code.bash
FBOF_clean/: FBOF_API.txt  README.txt  addNoise  demo  eval  run_demo  run_eval_fbof_parameters
FBOF_clean/Code/: CMakeLists.txt  CMakeLists_addNoise.txt  CMakeLists_demo.txt  CMakeLists_eval.txt  CMakeLists_eval_fbof_parameters.txt  eval  eval_fbof_parameters  openCvCmake.sh  run_addNoise  run_demo  run_eval  run_eval_fbof_parameters  run_main
FBOF_clean/Code/src/: addNoise.cpp  demo.cpp  eval.cpp  eval_fbof_parameters.cpp  main.cpp
FBOF_clean/Code/src/headers/: dataset.h  denoising.h  image_processing.h  io.h  scores.h
FBOF_clean/Code/src/motion_detection/: fbof.h  motion_detection.h
FBOF_clean/Code/src/motion_detection/St-Charles/: BackgroundSubtractorLBSP.cpp  BackgroundSubtractorLOBSTER.cpp  BackgroundSubtractorLOBSTER.h  BackgroundSubtractorPAWCS.h  BackgroundSubtractorSuBSENSE.h
FGBG_OPTFLOW/: API.txt  dataset_test  demo  eval  eval_fbof_parameters  extractNoise  main.cpp  main_2016-05-10-10-00.cpp  method_call_overview.txt  run  run_addNoise  run_dataset_test  run_eval  run_extractNoise  scriptie_workflow.tex
Motion_Detection/: main.cpp  run
Notes/: Grote lijnen algoritme  On noise.txt  eval parameters structuur.ods  feedback pre-presentatie 2016-12-20  planning 2016-12-21  thesis_rundown.txt
Scripts/: backup_fbof_data  check_output_complete  compress_cleaned_code.bash  cp_latest_datasheets  cp_latest_fbof_params  move_datasheets  (+7 more)
(+29 files in other folders)
